# OpenPSVR

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  OpenPSVR.sln  OpenPSVR.vcxproj  OpenPSVR.vcxproj.filters  Paths.props  ReadMe.md  Required.txt  appveyor.yml  build.bat  build.sh  clean.bat  clean.sh  generate.bat  generate.sh
cmake/: CMakeUtils.txt  FindGlm.cmake
driver/: driver.vrdrivermanifest  register-driver.bat  unregister-driver.bat
driver/resources/: driver.vrresources
driver/resources/icons/: psvr icon base.psd
driver/resources/settings/: default.vrsettings
include/OpenPSVR/: CameraPluginAPI.h  OpenPSVR_Common.h
installer/: openpsvr.xml
src/: BMI055Integrator.cpp  BMI055Integrator.h  BMI055MadgwickAHRS.cpp  BMI055MadgwickAHRS.h  CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.h  MadgwickAHRS.cpp  MadgwickAHRS.h  MadgwickAHRS.hpp  MahonyAHRS.cpp  MahonyAHRS.h  OpenPSVR.cpp  OpenPSVR.h  OpenPSVRDeviceDriver.cpp  OpenPSVRDeviceDriver.h  ServerDriver_OpenPSVR.cpp  ServerDriver_OpenPSVR.h  WatchdogDriver_OpenPSVR.cpp  WatchdogDriver_OpenPSVR.h  dllmain.cpp
src/Algorithms/: BMI055Integrator.cpp  BMI055Integrator.h  BMI055MadgwickAHRS.cpp  MadgwickAHRS.h  MahonyAHRS.cpp  MahonyAHRS.h
src/HMD/: OpenPSVR_HMDDeviceDriver.cpp  OpenPSVR_HMDDeviceDriver.h
